fix 'learn more' cut off when page zoom
title

--- a/css/main.css
+++ b/css/main.css
@@ -307,7 +307,7 @@ input {
 }
 
 .v6_194 {
-  width: 76px;
+  width: 100%;
   color: rgba(0, 0, 0, 1);
   position: absolute;
   top: 10px;
